@@ -41,7 +41,7 @@ class SessionTimeoutTest < ActionController::IntegrationTest
     assert_not_nil last_request_at
 
     get users_path
-    assert_redirected_to new_user_session_path
+    assert_redirected_to users_path
     assert_not warden.authenticated?(:user)
   end
 
@@ -68,7 +68,7 @@ class SessionTimeoutTest < ActionController::IntegrationTest
 
       get expire_user_path(user)
       get users_path
-      assert_redirected_to new_user_session_path
+      assert_redirected_to users_path
       assert_not warden.authenticated?(:user)
     end
   end
@@ -80,17 +80,31 @@ class SessionTimeoutTest < ActionController::IntegrationTest
       user = sign_in_as_user
 
       get expire_user_path(user)
-      get users_path
+      get root_path
       follow_redirect!
       assert_contain 'Session expired!'
     end
   end
-  
+
+  test 'error message with i18n with double redirect' do
+    store_translations :en, :devise => {
+      :failure => { :user => { :timeout => 'Session expired!' } }
+    } do
+      user = sign_in_as_user
+
+      get expire_user_path(user)
+      get users_path
+      follow_redirect!
+      follow_redirect!
+      assert_contain 'Session expired!'
+    end
+  end
+
   test 'time out not triggered if remembered' do
     user = sign_in_as_user :remember_me => true
     get expire_user_path(user)
     assert_not_nil last_request_at
-    
+
     get users_path
     assert_response :success
     assert warden.authenticated?(:user)
